crates/ohno_macros_impl/tests/snapshots/public_api__a_suppressing_flag_takes_no_arguments.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === no_debug with a list ===
::core::compile_error! {
    "`#[no_debug]` takes no arguments"
}

// === no_constructors with a value ===
::core::compile_error! {
    "`#[no_constructors]` takes no arguments"
}
